--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -7,9 +7,7 @@
 openapi: 3.0.0
 info:
   title: Simplified login API specification
-  description: |-
-    This OpenAPI document describes the simplified login API.
-    Copy and paste the API from the `paths` key to your OpenAPI document.
+  description: This OpenAPI document describes the simplified login API. Copy and paste the API from the `paths` key to your OpenAPI document.
   version: 0.0.1
   contact:
     name: Vincenzo Salvatore
@@ -96,6 +94,13 @@ components:
           schema: 
             $ref: '#/components/schemas/Comment'
 
+    like_added:
+      description: Il Like è stato aggiunto
+      content:
+        applicarion/json:
+          schema: 
+            $ref: '#/components/schemas/User_nickname'
+
     photo:
       description: informazioni binarie della foto
       content:
@@ -156,7 +161,7 @@ components:
       description: id dell'utente
       required: true
       schema:
-        $ref: '#/components/schemas/User_nickname/properties/username'
+        $ref: '#/components/schemas/User_nickname'
 
     #ID_FOLLOWER
     follower_id:
@@ -252,17 +257,18 @@ components:
   schemas:
 
     User_nickname:
-      description: |
-        Questo oggetto rappresenta l'username dell'Utente
+      description: Questo oggetto rappresenta l'username dell'Utente
       type: object
       properties:
         username:
           type: string
-          minimum: 5
-          maximum: 25
+          minLength: 5
+          maxLength: 25
           pattern: '^.*?$'
           example: '_Hashtag_Viinz_'
           readOnly: true
+      example:
+        username: '_Hashtag_Viinz_'
     
     Photo_id:
       description: Questo oggetto rappresenta l'ID Univoco delle photo
@@ -276,6 +282,9 @@ components:
           pattern: '^.*?$'
           readOnly: true
           example: 'b7q&bd62j'
+      example: 
+        id_code: 'b7q&bd62j'
+      
     
 
     Comment_id:
@@ -290,12 +299,12 @@ components:
           pattern: '^.*?$'
           readOnly: true
           example: 'd2iy39$!'
+      example:
+        id_code: 'd2iy39$!'
 
 
     User:
-      description: |
-        Questo oggetto rappresenta un Utente nel mondo che stiamo andando a
-        Creare.
+      description: Questo oggetto rappresenta un Utente nel mondo che stiamo andando a Creare.
       type: object
       properties:
         #Il nome utente dell'utente è anche il suo id. essendo univoco nel mio universo
@@ -315,6 +324,8 @@ components:
           description: Lista di utenti
           type: array
           #NON INSERISCO QUANTI UTENTI POSSONO ESSERCI
+          minItems: 0
+          maxItems: 9999
           items: 
             $ref: '#/components/schemas/User'
           example:
@@ -376,6 +387,8 @@ components:
           description: Array di Users che hanno messo 'like' alla photo
           type: array
           #NON importo un Limite di Like
+          minItems: 0
+          maxItems: 99999
           items:
             $ref: '#/components/schemas/User'
         image_photo:
@@ -404,6 +417,8 @@ components:
           description: Lista di photo
           type: array
           #NON CI SONO LIMITI DI PHOTO CHE L'UTENTE PUÒ AVERE
+          minItems: 0
+          maxItems: 99999
           items:
             $ref: '#/components/schemas/Photo'
           example:
@@ -503,10 +518,7 @@ paths:
     post:
       tags: ["login"]
       summary: Logs in the user
-      description: |-
-        If the user does not exist, it will be created,
-        and an identifier is returned.
-        If the user exists, the user identifier is returned.
+      description: If the user does not exist, it will be created, and an identifier is returned. If the user exists, the user identifier is returned.
       operationId: doLogin
       requestBody:
         description: User details
@@ -827,10 +839,7 @@ paths:
 
 
   /Users/{id}/Photos/{photo_id}:
-    description: |
-      Questo path rappresenta la sezione photo {id_photo} degli Utenti ID. Così da specificare quali
-      Operazioni posso svolgere con la singola photo. Vogliamo infatti poter ottenere le singole foto
-      attraverso --> getPhoto and eliminare le foto dell'utente --> deletePhoto
+    description: Questo path rappresenta la sezione photo {id_photo} degli Utenti ID. Così da specificare quali Operazioni posso svolgere con la singola photo. Vogliamo infatti poter ottenere le singole foto attraverso --> getPhoto and eliminare le foto dell'utente --> deletePhoto
     parameters:
       - $ref: '#/components/parameters/user_id'
       - $ref: '#/components/parameters/photo_id'
@@ -971,9 +980,7 @@ paths:
 
 
   /Users/{id}/Photos/{photo_id}/Likes/{like_id}:
-    description: |
-      path dedicato alla gestione dei like -
-      RIcorda che abbiamo elaborato i like come se fossero un'array di Users
+    description: path dedicato alla gestione dei like - RIcorda che abbiamo elaborato i like come se fossero un'array di Users
 
     parameters:
       - $ref: '#/components/parameters/user_id'
@@ -993,6 +1000,8 @@ paths:
               $ref: '#/components/schemas/User'
       
       responses:
+        '201':
+          $ref: '#/components/responses/like_added'
         '204':
           $ref: '#/components/responses/no_content'
         '401':
