--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -197,7 +197,9 @@ components:
         description: id dell'utente
         type: string
         pattern: "^.*?$"
-        #QUI HO TOLTO MINLENGHT E MAX PERCHE mi ha detto che non vanno qua
+        # 21 -03
+        minLength: 1
+        maxLength: 25
         example: "Leti"
       example: "Leti"
 
@@ -226,14 +228,10 @@ components:
     #ID di User
     User_id:
       description: Questo oggetto rappresenta l'id di un utente
-      type: object
-      properties:
-        user_id:
-          description: Intero compreso tra 0 e 9999
-          type: integer
-          minimum: 0
-          maximum: 9999
-          readOnly: true
+      type: integer
+      minimum: 0
+      maximum: 9999
+      readOnly: true
       example:
         user_id: 6542
 
@@ -447,12 +445,15 @@ paths:
           content:
             application/json:
               schema:
+                description: Log
                 type: object
                 properties:
                   identifier:
                     # change here if you decide to use an integer
                     # or any other type of identifier
                     type: string
+                    minLength: 5
+                    maxLength: 25
                     example: "abcdef012345"
 
   /Users:
@@ -462,6 +463,7 @@ paths:
     get:
       tags:
         - user
+      description: Ricerca dell'utente attraverso la query
       summary: Ricerca dell'utente attraverso le query
       operationId: searchUsers
 
@@ -489,6 +491,7 @@ paths:
     get:
       tags:
         - user
+      description: Ottenere il profilo dell'utente cercato
       summary: Ottenere il profilo dell'utente cercato
       operationId: getUserProfile
 
@@ -509,10 +512,13 @@ paths:
     put:
       tags:
         - user
+      description: Cambiamo il nickname dell'utente
       summary: Cambiamo il nickname dell'utente
       operationId: setMyUserName
 
       requestBody:
+        #1
+        description: nuovo Nickname dell'user
         required: true
         content:
           applicarion/json:
@@ -543,6 +549,7 @@ paths:
     get:
       tags:
         - stream
+      description: Ottiene lo Stream di foto dell'Utente
       summary: Ottiene lo Stream di foto dell'Utente
       operationId: getMyStream
 
@@ -570,6 +577,7 @@ paths:
     put:
       tags:
         - follower
+      description: Segui un Utente follower_id
       summary: Segui un Utente follower_id
       operationId: followUser
 
@@ -588,6 +596,7 @@ paths:
     delete:
       tags:
         - follower
+      description: togli il follow all'utente follower_id
       summary: togli il follow all'utente follower_id
       operationId: unfollowUser
 
@@ -613,6 +622,7 @@ paths:
     put:
       tags:
         - ban
+      description: Banniamo l'utente
       summary: Banniamo l'utente
       operationId: banUser
 
@@ -632,6 +642,7 @@ paths:
     delete:
       tags:
         - ban
+      description: Unbanniamo l'utente
       summary: Unbanniamo l'utente
       operationId: unbanUser
 
@@ -656,10 +667,12 @@ paths:
     post:
       tags:
         - photo
+      description: L'utente carica una foto
       summary: L'utente carica una foto
       operationId: uploadPhoto
 
       requestBody:
+        description: Immagine passata dall'utente
         content:
           image/*: #POSSO PASSARE QUALSIASI TIPO DI IMMAGINE
             schema:
@@ -689,6 +702,7 @@ paths:
     get:
       tags:
         - photo
+      description: Otteniamo la foto
       summary: Otteniamo la foto
       operationId: getPhoto
 
@@ -708,6 +722,7 @@ paths:
     delete:
       tags:
         - photo
+      description: Eliminiamo la foto Photo_id
       summary: Eliminiamo la foto Photo_id
       operationId: deletePhoto
 
@@ -737,6 +752,7 @@ paths:
     post:
       tags:
         - comments
+      description: Commentiamo la photo
       summary: Commentiamo la Photo
       operationId: commentPhoto
 
@@ -771,6 +787,7 @@ paths:
     delete:
       tags:
         - comments
+      description: Eliminiamo il commento 
       summary: Eliminiamo il commento
       operationId: uncommentPhoto
 
@@ -827,6 +844,7 @@ paths:
     delete:
       tags:
         - like
+      description: Togliamo il like della photo
       summary: Togliamo il like dalla photo
       operationId: unlikePhoto
 
